# lang-e

./: NAMES  READ  etest.e  lang_notes  something.e
VCODE/: latest-vcode-release.tar.Z  vcode-pldi.ps
VCODE/vcode-release0.08/: COPYRIGHT  README  install  pack
VCODE/vcode-release0.08/doc/: pldi.ps  tutorial.ps
VCODE/vcode-release0.08/examples/calc/: README  calc.l  calc.out  calc.tab.c  calc.tab.h  calc.y  dcg_calc.tab.c  (+5 more)
VCODE/vcode-release0.08/tests/: README  call-gen  call-test.c  call.c  ctest.out  jal-test.c  jal-test.out  makefile  stest.c  test-gen  vdemand.h  vm.c
VCODE/vcode-release0.08/vcode-src/: CHANGES  README  TODO  alpha-bin  alpha-config.h  alpha-gen.c  alpha-makefile  alpha.md  call.c  demand.h  flushcache.c  fp-imm.c  gen.c  link.c  makefile  mips-bin  mips-config.h  mips-gen.c  mips-makefile  mips.md  poly-insns.c  portable-insts.c  register.c  sgi-makefile  solaris-config.h  solaris-makefile  sparc-bin  sparc-dis.c  sparc-gen.c  sparc-makefile  sparc-pseudo.S  sparc.md  spec.pl  vcode-config.h  vcode-internal.h  vcode.h
tickc/: URL  pldi-tickc.ps  tcc-1.0b9.tgz  tickc-pldi-submit.ps  wcsss.ps
tickc/tcc-1.0b9/: INSTALL  Makefile.in  README  configure
tickc/tcc-1.0b9/config/: config.sub  configure.in
tickc/tcc-1.0b9/config/sys/: i386-linux.c  linux.orig.c  mips-ultrix.c  sparc-solaris.c  sparc-sunos.c  ssbig-sstrix.c  sslittle-sstrix.c  sslittle256-sstrix.c
tickc/tcc-1.0b9/doc/: ChangeLog  Credits  tutorial.ps
tickc/tcc-1.0b9/src/icode/: Makefile.in  cfg.c  cfg.h  configure  configure.in  icode-internal.h  icode.c  icode.h  li-full.c  li-scc.c  li.h  ll.c  ll.h  macros-pat.h  macros-prt.h  op.def  reg-gc.c  reg-ls.c  reg-manager.c  reg-manager.h  reg.c  reg.h  util.h
tickc/tcc-1.0b9/src/icode/config/: mips-ultrix.c  mips-ultrix.h  sparc-solaris.c  sparc-sunos.h  sslittle-sstrix.h  sslittle256-sstrix.c  sslittle256-sstrix.h
tickc/tcc-1.0b9/src/icode/test/: Makefile  djw.c  sw0.c  test-ll.pl  test-ra.pl  test.c  test2.c  test2c.c  test3.c  test3c.c  test4.c  test5.c
tickc/tcc-1.0b9/src/icode/test/heap/: makefile  tst.c  tst.ops  tst.orig.c
tickc/tcc-1.0b9/src/lburg/: Makefile.in  README  configure  configure.in  gram.tab.c  gram.y  lburg.c  lburg.h
tickc/tcc-1.0b9/src/lburg/tst/: t2.pd  test.md  test2.md
tickc/tcc-1.0b9/src/rcc/: Makefile.in  Makefile.test  alloc.c  bind.c  c-backend.c  c.h  closure.c  config.h  configure  configure.in  dag.c  decl.c  enode.c  error.c  event.c  expr.c  gen.c  icode.md  idef.c  init.c  input.c  lex.c  linux.md  list.c  macros.h  main.c  mips.md  null.c  output.c  prof.c  profio.c  simp.c  sparc.md  stmt.c  string.c  sym.c  symbolic.c  token.h  trace.c  tree.c  (+4 more)
tickc/tcc-1.0b9/src/rcc/etc/: envgen.pl
tickc/tcc-1.0b9/src/rts/: Makefile.in  configure  configure.in  test.c  tickc-rts.c  tickc-rts.h
tickc/tcc-1.0b9/src/tcc/: Makefile.in  bprint.c  configure  configure.in  tcc.c
tickc/tcc-1.0b9/tst/: gen-tests.pl  regress.pl
(+369 files in other folders)
