dnl Process this file with autoconf to produce a configure script.
AC_INIT(gram.y)

AC_CONFIG_AUX_DIR(../../config)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_YACC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strspn strtol)

AC_OUTPUT(Makefile)
