dnl Process this file with autoconf to produce a configure script.
AC_INIT(tickc-rts.h)

AC_CONFIG_AUX_DIR(../../config)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PATH_PROG(AR, ar, /usr/bin/ar, $PATH)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
